# tww-gz

./: .clang-format  .gitignore  BUILDING.md  CMakeLists.txt  Makefile  PATCHING.md  PotentiallyUsefulAddresses&Functions.md  README.md  RomHack-template.toml  RomHack.toml  RomHack.toml.in  THANKS.md  patch.asm  patch.asm.in  regional-patch.asm
modules/: CMakeLists.txt
modules/boot/: CMakeLists.txt
modules/boot/include/: actor_loader.h  actor_move_manager.h  actor_proc_data.h  boot.h  buffer_button.h  charts.h  cheats.h  commands.h  controller.h  equip_priority.h  flags.h  font.h  geometry_draw.h  global_data.h  gz_flags.h  menu.h  modules.h  pos_settings.h  practice.h  save_manager.h  save_specials.h  scene.h  settings.h  tools.h  watches.h
modules/boot/include/events/: draw_listener.h  listener_base.h  post_loop_listener.h  pre_loop_listener.h
modules/boot/include/utils/: card.h  cursor.h  draw.h  hook.h  item.h  lines.h  link.h  memory.h  rels.h  texture.h
modules/boot/src/: actor_loader.cpp  actor_move_manager.cpp  actor_proc_data.cpp  buffer_button.cpp  charts.cpp  cheats.cpp  commands.cpp  controller.cpp  equip_priority.cpp  fifo_queue.cpp  flags.cpp  font.cpp  fs.cpp  geometry_draw.cpp  global_data.cpp  gz_flags.cpp  main.cpp  menu.cpp  modules.cpp  pos_settings.cpp  save_manager.cpp  save_specials.cpp  scene.cpp  settings.cpp  tools.cpp
modules/boot/src/utils/: card.cpp  cursor.cpp  disc.cpp  draw.cpp  hook.cpp  item.cpp  lines.cpp  link.cpp  memory.cpp  rels.cpp  texture.cpp
modules/features/: CMakeLists.txt
modules/features/actor_view/include/: actor_view.h  main.h
modules/features/actor_view/src/: actor_view.cpp  main.cpp
modules/features/bpc_tool/: CMakeLists.txt
modules/features/bpc_tool/include/: bomb_push_clip_tool.h
modules/features/bpc_tool/src/: bomb_push_clip_tool.cpp  main.cpp
modules/features/input_viewer/src/: input_viewer.cpp  main.cpp
modules/features/moveactor/include/: moveactor.h
modules/features/moveactor/src/: main.cpp  moveactor.cpp
modules/features/pause_buffer_input_tool/include/: pause_buffer_input.h
modules/features/pause_buffer_input_tool/src/: main.cpp  pause_buffer_input.cpp
modules/features/rollclip_tool/include/: rollclip_tool.h
modules/features/rollclip_tool/src/: main.cpp  rollclip_tool.cpp
modules/init/src/: main.cpp
modules/menus/: CMakeLists.txt
modules/menus/menu_actor_list/include/: actor_list_menu.h
modules/menus/menu_actor_list/src/: actor_list_menu.cpp  main.cpp
modules/menus/menu_actor_spawn/include/: actor_spawn_menu.h
modules/menus/menu_actor_spawn/src/: actor_spawn_menu.cpp  main.cpp
modules/menus/menu_ad_saves/include/: all_dungeons_saves_menu.h
modules/menus/menu_ad_saves/src/: all_dungeons_saves_menu.cpp  main.cpp
modules/menus/menu_all_dungeons_saves/src/: all_dungeons_saves_menu.cpp  main.cpp
modules/menus/menu_amounts/include/: amounts_menu.h
modules/menus/menu_amounts/src/: amounts_menu.cpp  main.cpp
modules/menus/menu_any_nomss_saves/src/: any_nomss_saves_menu.cpp  main.cpp
modules/menus/menu_any_optimal_saves/include/: any_optimal_saves_menu.h
modules/menus/menu_any_optimal_saves/src/: any_optimal_saves_menu.cpp  main.cpp
modules/menus/menu_any_saves/include/: any_saves_menu.h
modules/menus/menu_any_saves/src/: any_saves_menu.cpp  main.cpp
modules/menus/menu_anyoptimal_saves/src/: anyoptimal_saves_menu.cpp  main.cpp
modules/menus/menu_bait_bag/include/: bait_bag_menu.h
modules/menus/menu_bait_bag/src/: bait_bag_menu.cpp  main.cpp
modules/menus/menu_beginner_saves/include/: beginner_saves_menu.h
modules/menus/menu_beginner_saves/src/: beginner_saves_menu.cpp  main.cpp
modules/menus/menu_charts/include/: charts_menu.h
modules/menus/menu_charts/src/: charts_menu.cpp  main.cpp
modules/menus/menu_cheats/src/: cheat_menu.cpp  main.cpp
modules/menus/menu_collision_view/include/: collision_view_menu.h
modules/menus/menu_collision_view/src/: collision_view_menu.cpp  main.cpp
modules/menus/menu_delivery_bag/include/: delivery_bag_menu.h
modules/menus/menu_delivery_bag/src/: deilvery_bag_menu.cpp  main.cpp
modules/menus/menu_dungeon_flags/include/: dungeon_flags_menu.h
modules/menus/menu_dungeon_flags/src/: dungeon_flags_menu.cpp  main.cpp
modules/menus/menu_equip_priority/include/: equip_priority_menu.h
modules/menus/menu_equip_priority/src/: equip_priority_menu.cpp  main.cpp
modules/menus/menu_flags/include/: flags_menu.h
modules/menus/menu_flags/src/: flags_menu.cpp  main.cpp
modules/menus/menu_general_flags/include/: general_flags_menu.h
modules/menus/menu_general_flags/src/: general_flags_menu.cpp  main.cpp
modules/menus/menu_inventory/include/: inventory_menu.h
modules/menus/menu_inventory/src/: inventory_menu.cpp  main.cpp
modules/menus/menu_item_inventory/include/: item_inventory_menu.h
modules/menus/menu_item_inventory/src/: item_inventory_menu.cpp  main.cpp
modules/menus/menu_main/include/: main_menu.h
modules/menus/menu_main/src/: main.cpp  main_menu.cpp
modules/menus/menu_memory/include/: memory_menu.h
modules/menus/menu_memory/src/: main.cpp  memory_menu.cpp
modules/menus/menu_memory_editor/include/: memory_editor_menu.h
modules/menus/menu_memory_editor/src/: main.cpp  memory_editor_menu.cpp
modules/menus/menu_nomss_saves/include/: any_nomss_saves_menu.h
modules/menus/menu_nomss_saves/src/: any_nomss_saves_menu.cpp  main.cpp
modules/menus/menu_pmg_saves/include/: pmg_saves_menu.h
modules/menus/menu_pmg_saves/src/: main.cpp  pmg_saves_menu.cpp
modules/menus/menu_pos_settings/src/: main.cpp  position_settings_menu.cpp
modules/menus/menu_practice/include/: practice_menu.h
modules/menus/menu_practice/src/: main.cpp  practice_menu.cpp
modules/menus/menu_pst_saves/: CMakeLists.txt
modules/menus/menu_pst_saves/include/: main.h  pst_saves_menu.h
modules/menus/menu_pst_saves/src/: main.cpp  pst_saves_menu.cpp
modules/menus/menu_quest_status/include/: quest_status_menu.h
modules/menus/menu_quest_status/src/: main.cpp  quest_status_menu.cpp
modules/menus/menu_scene/src/: main.cpp  (+1 more)
(+172 files in other folders)
